add default keywords to sql code area