@@ -12,6 +12,7 @@ import java.util.Set;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -32,9 +33,27 @@ public class SqlCodeAreaSyntaxProvider implements CodeAreaSyntaxProvider<String>
 	private static String DB_TYPE = "";
 	private static List<String> FUNCTIONS;
 	private static List<String> TYPES;
-	private static List<String> KEYWORDS;
+	private static List<String> KEYWORDS = Arrays.asList(new String[] {
+	        "add","ADD","all","ALL","alter","ALTER","and","AND","any","ANY",
+	        "as","AS","asc","ASC","backup","BACKUP","between","BETWEEN","by","BY",
+	        "case","CASE","check","CHECK","column","COLUMN","constraint","CONSTRAINT","create","CREATE",
+	        "database","DATABASE","default","DEFAULT","delete","DELETE","desc","DESC","distinct","DISTINCT",
+	        "drop","DROP","else","ELSE","end","END","exists","EXISTS","foreign","FOREIGN",
+	        "from","FROM","full","FULL","group","GROUP","having","HAVING","in","IN",
+	        "index","INDEX","inner","INNER","insert","INSERT","into","INTO","is","IS",
+	        "join","JOIN","key","KEY","left","LEFT","like","LIKE","limit","LIMIT",
+	        "not","NOT","null","NULL","on","ON","or","OR","order","ORDER",
+	        "outer","OUTER","primary","PRIMARY","procedure","PROCEDURE","right","RIGHT","rownum","ROWNUM",
+	        "select","SELECT","set","SET","table","TABLE","top","TOP","truncate","TRUNCATE",
+	        "union","UNION","unique","UNIQUE","update","UPDATE","values","VALUES","view","VIEW",
+	        "where","WHERE","with","WITH","grant","GRANT","revoke","REVOKE","commit","COMMIT",
+	        "rollback","ROLLBACK","savepoint","SAVEPOINT","transaction","TRANSACTION","cascade","CASCADE","restrict","RESTRICT",
+	        "replace","REPLACE","declare","DECLARE","cursor","CURSOR","fetch","FETCH","open","OPEN",
+	        "close","CLOSE","loop","LOOP","while","WHILE","if","IF","then","THEN",
+	        "elsif","ELSIF","return","RETURN","language","LANGUAGE","function","FUNCTION","trigger","TRIGGER"
+	});
 
-	private static final Set<Keyword> KEYWORDS_lIST = new LinkedHashSet<>();
+	private static final Set<Keyword> KEYWORDS_lIST = new LinkedHashSet<>(KEYWORDS.stream().map(word -> new Keyword(word, KeywordType.KEYWORD)).toList());
 	private static final Map<String, Set<String>> COLUMNS_MAP = new HashMap<>();
 
 	private static final String PAREN_PATTERN = "\\(|\\)";
@@ -46,9 +65,13 @@ public class SqlCodeAreaSyntaxProvider implements CodeAreaSyntaxProvider<String>
 //    private static final String NUMBERS_PATTERN = "[0-9]+";
 	private static final String METHOD_PATTERN = "\\.[a-zA-Z0-9_]+";
 
-	private static String KEYWORD_PATTERN;
+	private static String KEYWORD_PATTERN = "\\b(" + String.join("|", KEYWORDS) + ")\\b";
 	private static String FUNCTIONS_PATTERN;
-	private static Pattern PATTERN;
+	private static Pattern PATTERN = Pattern.compile("(?<KEYWORD>" + KEYWORD_PATTERN + ")" + "|(?<PAREN>" + PAREN_PATTERN + ")"
+			+ "|(?<SEMICOLON>" + SEMICOLON_PATTERN + ")" + "|(?<STRING>" + STRING_PATTERN + ")" 
+			+ "|(?<STRING2>" + STRING_PATTERN_2 + ")" + "|(?<COMMENT>" + COMMENT_PATTERN + ")" + "|(?<METHOD>" + METHOD_PATTERN + ")"
+			);
+
 
 	public static void init(String dbType) {
 		DB_TYPE = dbType;
@@ -59,7 +82,12 @@ public class SqlCodeAreaSyntaxProvider implements CodeAreaSyntaxProvider<String>
 		var funcs = getAutocomplteWords("funcs");
 		FUNCTIONS = funcs.stream().map(dto -> (String) dto.get("name")).toList();
 		TYPES = getAutocomplteWords("types").stream().map(dto -> (String) dto.get("name")).toList();
-		KEYWORDS = getAutocomplteWords("sql").stream().map(dto -> (String) dto.get("name")).toList();
+		KEYWORDS = Stream.concat(
+					KEYWORDS.stream(), 
+					getAutocomplteWords("sql").stream().map(dto -> (String) dto.get("name"))
+				  )
+				  .distinct()
+		          .collect(Collectors.toList());
 
 		KEYWORD_PATTERN = "\\b(" + String.join("|", KEYWORDS) + ")\\b";
 		FUNCTIONS_PATTERN = "\\b(" + String.join("|", FUNCTIONS) + ")\\b";
